# mars_ned2

./: .gitignore  Gemfile  LICENSE  _config.yml  blog.html  generate_mars_logo.py  generate_post_image.py  index.html  posts.json
_data/: navigation.yml
_includes/: archive-single.html  footer.html  masthead.html  posts.html
_layouts/: posts.html  single.html
_logo/: generate_post_image.py  posts.json
_pages/: posts.md
_posts/: 2026-01-19-what_is_mars.md  2026-01-23-understanding_ros2.md  2026-01-26-Niryo_Ned2.md  2026-01-28-pyniryo.md  2026-01-30-ned_ros.md  2026-02-02-robot_description.md  2026-02-04-gazebo.md  2026-02-05-mujoco.md  2026-02-10-camera_calibration.md  2026-02-13-transportFrames.md  2026-02-18-fuditialmarkers.md  2026-02-24-moveit2.md  2026-02-28-how_to_setup_dual_arm_setup.md  2026-02-29-how_to_setup_dual_arm_setup.md  2026-03-02-dualarmconfig.md  2026-03-04-collision_avoidance.md  2026-03-05-lit_review.md  2026-03-07-interfacing_with_moveit.md  2026-03-10-moveitpy.md  2026-03-12-trajectory_execution.md  2026-03-14-interfacing_with_moveit.md  2026-03-15-planning_scene.md  2026-03-16-state_management.md  2026-03-20-trajectory_proxy.md  2026-03-23-test_sync_n_async.md  2026-03-26-test_collision.md  (+8 more)
src/niryo_ned2_dual_arm_moveit_config/: CMakeLists.txt  package.xml
src/niryo_ned2_dual_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_py_params.yaml  niryo_ned2_dual_arm.ros2_control.xacro  niryo_ned2_dual_arm.srdf  pilz_planning_pipeline.yaml  workspace_scene.scene  workspace_scene.yaml
(+58 files in other folders)
