<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_ned2_dual_arm_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt 2 configuration package for Niryo Ned2 dual-arm robot with motion planning and control</description>
  <maintainer email="2dellab@gmail.com">ros2</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
